Fix alignments

--- a/complaints/static/main.css
+++ b/complaints/static/main.css
@@ -30,6 +30,7 @@ div.well{
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
+  text-overflow: auto;
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
@@ -42,6 +43,7 @@ div.well{
   border: 1px solid #888;
   width: 60%;
   height: 30%;
+  text-overflow: auto;
 }
 
 /* The Close Button */
@@ -55,6 +57,18 @@ div.well{
 .close:hover,
 .close:focus {
   color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.close2 {
+  color: #000;
+  font-size: 14px;
+  position:relative;
+}
+
+.close2:hover,
+.close2:focus {
   text-decoration: none;
   cursor: pointer;
 }
